// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRepoMetadataForm passes the correct fixedOptions when user appears in the existing list 1`] = `
Array [
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[{"userId":"sub"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"citationString","label":"Citation String"}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"license","label":"License","options":[{"value":"OGL","text":"OGL"},{"value":null,"text":"No license"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"publisher","label":"Publisher","options":[{"value":"EIDC","text":"EIDC"},{"value":null,"text":"No publisher"}]}
  </div>,
]
`;

exports[`EditRepoMetadataForm passes the correct fixedOptions when user has no edit permissions 1`] = `
Array [
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[{"userId":"sub"},{"userId":"other"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"citationString","label":"Citation String"}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"license","label":"License","options":[{"value":"OGL","text":"OGL"},{"value":null,"text":"No license"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"publisher","label":"Publisher","options":[{"value":"EIDC","text":"EIDC"},{"value":null,"text":"No publisher"}]}
  </div>,
]
`;

exports[`EditRepoMetadataForm passes the correct fixedOptions when user is a data manager 1`] = `
Array [
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"citationString","label":"Citation String"}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"license","label":"License","options":[{"value":"OGL","text":"OGL"},{"value":null,"text":"No license"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"publisher","label":"Publisher","options":[{"value":"EIDC","text":"EIDC"},{"value":null,"text":"No publisher"}]}
  </div>,
]
`;

exports[`EditRepoMetadataForm renders to match snapshot 1`] = `
<div>
  <form>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[]}
    </div>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
    </div>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"citationString","label":"Citation String"}
    </div>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"license","label":"License","options":[{"value":"OGL","text":"OGL"},{"value":null,"text":"No license"}]}
    </div>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"publisher","label":"Publisher","options":[{"value":"EIDC","text":"EIDC"},{"value":null,"text":"No publisher"}]}
    </div>
    <div
      class="makeStyles-fromControlContainer-1"
    >
      <span
        aria-label="No changes to apply"
        class="makeStyles-button-2"
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-o0h1hg-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="submit"
        >
          Apply
        </button>
      </span>
      <span
        aria-label="No changes to clear"
        class="makeStyles-button-2"
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-i65xv2-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Clear Changes
        </button>
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium makeStyles-button-2 css-i65xv2-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Cancel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
